<resources>
    <string name="app_name">p4Compass</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="compass">Compass</string>
    <string name="step_history">Step History</string>
</resources>
